syntax = "proto2";

package tabml.protos;

import "tabml/protos/path.proto";

// Next id: 11
message DataLoader {
    required string cls_name = 1; // name of DataLoader class
    optional int32 batch_size = 2;

    // gen profiling using pandas-profiling
    optional bool gen_profiling = 3 [default = false];

    // path to feature_manager pb config
    optional Path feature_manager_config_path = 4;
    // list of features going in to the model
    repeated string features_to_model = 5;

    // filter to determine training, validation, and submission data
    repeated string train_filters = 6;
    repeated string validation_filters = 7;
    repeated string submission_filters = 8;
    repeated string test_filters = 9;

    // name of label column
    optional string label_col = 10;
}
