syntax = "proto2";

package tabml.protos;

message Path {
  required string path = 1;
  optional bool is_absolute_path = 2 [default = false];
}
